MetaRendererNative: Let the closure handle queuing flip notification

The queuing that was removed in this commit would be done in the clean
up function of the closure anyway.

https://bugzilla.gnome.org/show_bug.cgi?id=774923